Added π button, removed rad_deg.
Also a little code cleanup.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div id="advanced_numpad" class="hidden">
             <div id="key_c" class="key col-4 c darkblue"></div>
-            <div id="key_rad_deg" class="key col-4 darkblue disabled">rad</div>
+            <div id="key_π" class="key col-4">π</div>
             <div id="key_factorial" class="key col-4">x!</div>
             <div id="key_del" class="key long-tap-repeat col-4 darkblue"></div>
             
